# bonfida-utils

./: .gitignore  Cargo.toml  README.md  flake.nix
autobindings/: Cargo.toml
autobindings/src/: idl_generate.rs  js_generate.rs  lib.rs  main.rs  py_generate.rs  test.rs
autobindings/src/templates/: template.py  template.ts
autodoc/: Cargo.toml
autodoc/src/: lib.rs  main.rs  utils.rs
autoproject/: Cargo.toml
autoproject/src/: lib.rs  main.rs
autoproject/src/template/: README.md
autoproject/src/template/js/: package.json
autoproject/src/template/js/src/: bindings.ts  index.ts  raw_instructions.ts  secondary_bindings.ts  state.ts
autoproject/src/template/js/tests/: end_to_end.test.ts  utils.ts
autoproject/src/template/program/: Cargo.toml
autoproject/src/template/program/src/: cpi.rs  entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
autoproject/src/template/program/src/processor/: example_instr.rs
autoproject/src/template/program/src/state/: example_state_borsh.rs  example_state_cast.rs
autoproject/src/template/program/tests/: functional.rs
autoproject/src/template/python/src/: raw_instructions.py
benchviz/: Cargo.toml
benchviz/src/: main.rs
cli/: Cargo.toml
cli/src/: main.rs
crates/autobindings/: Cargo.toml
crates/autobindings/src/: idl_generate.rs  js_generate.rs  lib.rs  py_generate.rs  test.rs
crates/autobindings/src/templates/: template.ts
crates/autodoc/: Cargo.toml
crates/autodoc/src/: utils.rs
crates/autoproject/: Cargo.toml
crates/autoproject/src/: .gitignore  lib.rs
crates/autoproject/src/template/: .gitignore
crates/autoproject/src/template/js/tests/: end_to_end.test.ts  utils.ts
crates/autoproject/src/template/program/: _Cargo.toml
crates/autoproject/src/template/program/src/: cpi.rs  entrypoint.rs  error.rs  processor.rs  state.rs
crates/autoproject/src/template/program/src/state/: example_state_borsh.rs  example_state_cast.rs
crates/benchviz/: Cargo.toml
crates/benchviz/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/macros/: Cargo.toml  README.md
crates/macros/src/: accounts.rs  borsh_size.rs  compute_record_hash.rs  compute_record_hash_v2.rs  declare_id_with_central_state.rs  lib.rs  wrapped_pod.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: error.rs  program_test_context_ext.rs  program_test_ext.rs
crates/utils/: Cargo.toml  README.md
crates/utils/src/: accounts.rs  bench.rs  checks.rs  compute_record_hash.rs  lib.rs  pyth.rs  tokens.rs  wrapped_pod.rs
crates/utils/src/pyth/: utils.rs
js/: package.json  tsconfig.json
js/src/: check_account_exist.ts  index.ts  sign_and_send.ts  sleep.ts  token.ts
localnet/: Cargo.toml  README.md
localnet/src/: lib.rs  main.rs  test_validator.rs
macros/: Cargo.toml
macros/src/: accounts.rs  borsh_size.rs  compute_record_hash.rs  declare_id_with_central_state.rs  instruction_params.rs  lib.rs  pubkey.rs  wrapped_pod.rs
src/: accounts.rs  borsh_size.rs  fp_math.rs  lib.rs  pubkey.rs
test-utils/: Cargo.toml
test-utils/src/: error.rs  lib.rs  program_test_context_ext.rs  program_test_ext.rs  utils.rs
utils/: Cargo.toml
utils/src/: accounts.rs  bench.rs  borsh_size.rs  borsh_utils.rs  checks.rs  compute_record_hash.rs  declare_id_with_central_state.rs  fp_math.rs  functional_common.rs  lib.rs  params.rs  pyth.rs
