[package]
name = "cargo-autodoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version = "1.0", features = ["full", "extra-traits"]}
proc-macro2 = "1.0"
clap = "2.34"
convert_case = "0.4.0"
quote = "1.0"
rustfmt-wrapper = "0.1.0"


