[package]
name = "cargo-autoproject"
description = "Utility to generate a solana smart contract template"
license = "MIT"
version = "0.1.0"
authors = ["Lcchy <lcchy@mailbox.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
syn = {version = "1.0", features = ["full", "extra-traits"]}
convert_case = "0.4.0"
proc-macro2 = "1.0"
