[package]
name = "autoproject"
description = "Utility to generate a solana smart contract template"
license = "MIT"
version = "0.1.1"
authors = ["Lcchy <lcchy@mailbox.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.2.6", features = ["cargo"]}
syn = {version = "1.0", features = ["full", "extra-traits"]}
convert_case = "0.5.0"
proc-macro2 = "1.0"
fs_extra = "1.2.0"
include_dir = "0.7.2"