[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.6"
autobindings = {path = "../autobindings"}
autodoc = {path = "../autodoc"}
autoproject = {path = "../autoproject"}
benchviz = {path = "../benchviz"}

[[bin]]
name = "bonfida"
path = "src/main.rs"