[package]
name = "bonfida-cli"
version = "0.1.0"
description = "Bonfida CLI utilities for Solana development"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.6"
bonfida-autobindings = "0.1"
bonfida-autodoc = "0.1"
bonfida-autoproject = "0.1"
bonfida-benchviz = "0.1"

[[bin]]
name = "bonfida"
path = "src/main.rs"