[package]
name = "bonfida-localnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-validator = "1.11.10"
solana-core = "1.11.10"
solana-sdk = "1.11.10"
solana-gossip = "1.11.10"
solana-rpc = "1.11.10"
solana-net-utils = "1.11.10"
solana-streamer = "1.11.10"
solana-clap-utils = "1.11.10"
solana-program-test = "1.11.10"
solana-runtime = "1.11.10"
num_cpus = "1.13.1"