[package]
name = "bonfida-macros"
version = "0.2.3"
authors = ["ellttBen <elliott@bonfida.com>"]
edition = "2018"
description = "Bonfida-utils macros"
license = "MIT"

[features]
instruction_params_casting = []

[lib]
proc-macro = true

[dependencies]
solana-program = "1.8"
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
