[package]
name = "bonfida-utils"
version = "0.2.12"
authors = ["ellttBen <elliott@bonfida.com>"]
description = "Various solana program writing utilities in use by Bonfida."
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
instruction_params_casting = ["bonfida-macros/instruction_params_casting", "bytemuck"]
instruction_params_custom = ["bonfida-macros/instruction_params_custom", "bytemuck"]
mock-oracle = []
benchmarking = ["lazy_static", "regex", "serde", "serde_json"]

[dependencies]
borsh = "0.9"
solana-program = "1.8"
pyth-sdk-solana = "0.4.0"
bonfida-macros = {path = "../macros"}
bytemuck = {version = "1.9.1", optional=true}
lazy_static = {version = "1.4.0", optional=true}
regex = {version = "1.5.5", optional=true}
serde = {version = "1.0.136", features=["derive"], optional=true}
serde_json = {version = "1.0.79",  optional=true}
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}

[dev-dependencies]
solana-client = "1.9"
