[package]
name = "bonfida-autobindings"
description = "Utility to generate JavaScript and python bindings for Solana smart contracts following the Bonfida code conventions"
license = "MIT"
version = "0.4.1"
authors = ["ellttBen <elliott@bonfida.com>"]
edition = "2018"
repository = "https://github.com/Bonfida/bonfida-utils.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.2.6", features = ["cargo"]}
syn = {version = "1.0", features = ["full", "extra-traits"]}
convert_case = "0.5.0"
rand = "0.8.5"
proc-macro2 = "1.0"
hex = "0.4.3"
anchor-syn = {version = "0.29.0", features = ["idl-build"]}
serde = "1.0.137"
serde_json = "1.0.81"
cargo_toml = "0.11.5"
