[package]
name = "bonfida-autodoc"
description = "Utility to generate documentation for Solana Program instructions"
version = "0.6.3"
license = "MIT"
edition = "2021"
repository = "https://github.com/Bonfida/bonfida-utils.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version = "1.0", features = ["full", "extra-traits"]}
proc-macro2 = "1.0"
clap = {version = "3.2.6", features = ["cargo"]}
convert_case = "0.5.0"
quote = "1.0"
rustfmt-wrapper = "0.2.0"


