[package]
name = "bonfida-benchviz"
version = "0.3.5"
description = "Utility for visualizing Solana Program benchmark results"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gnuplot = "0.0.37"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
regex = "1"
bonfida-utils = {version = "0.3.5", path="../utils", features = ["benchmarking"]}
clap = {version = "3.2.6", features = ["cargo"]}