[package]
name = "bonfida-cli"
version = "0.3.10"
description = "Bonfida CLI utilities for Solana development"
license = "MIT"
edition = "2021"
repository = "https://github.com/Bonfida/bonfida-utils.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.6"
bonfida-autobindings = {version = "0.3.10", path="../autobindings"}
bonfida-autodoc = {version = "0.3.10", path="../autodoc"}
bonfida-autoproject = {version = "0.3.10", path="../autoproject"}
bonfida-benchviz = {version = "0.3.10", path="../benchviz"}

[[bin]]
name = "bonfida"
path = "src/main.rs"
