[package]
name = "bonfida-macros"
version = "0.6.8"
authors = ["ellttBen <elliott@bonfida.com>"]
edition = "2018"
description = "Bonfida-utils macros"
license = "MIT"
repository = "https://github.com/Bonfida/bonfida-utils.git"

[features]

[lib]
proc-macro = true

[dependencies]
solana-program = "1.18.11"
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
spl-name-service = "0.3.0"
