[package]
name = "bonfida-macros"
version = "0.7.0"
authors = ["ellttBen <elliott@bonfida.com>"]
edition = "2018"
description = "Bonfida-utils macros"
license = "MIT"
repository = "https://github.com/Bonfida/bonfida-utils.git"

[features]

[lib]
proc-macro = true

[dependencies]
solana-program = { workspace = true }
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
# spl-name-service = { workspace = true }
