[package]
name = "bonfida-test-utils"
version = "0.6.2"
authors = ["ellttBen <elliott@bonfida.com>"]
description = "Solana program testing utilities when working with bonfida-utils."
license = "MIT"
edition = "2021"
repository = "https://github.com/Bonfida/bonfida-utils.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.18.11"
solana-program-test = "1.18.11"
solana-sdk = "1.18.11"
spl-token = "4.0.0"
async-trait = "0.1.56"
spl-associated-token-account = "3.0.2"
