[package]
name = "bonfida-test-utils"
version = "0.9.0"
authors = ["ellttBen <elliott@bonfida.com>"]
description = "Solana program testing utilities when working with bonfida-utils."
license = "MIT"
edition = "2021"
repository = "https://github.com/Bonfida/bonfida-utils.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = { workspace = true }
solana-program-test = { workspace = true, features = ["agave-unstable-api"] }
solana-sdk = { workspace = true }
spl-token = { workspace = true }
async-trait = "0.1.56"
spl-associated-token-account = "8.0.0"
