[package]
name = "bonfida-utils"
version = "0.9.0"
authors = ["ellttBen <elliott@bonfida.com>"]
description = "Various solana program writing utilities in use by Bonfida."
license = "MIT"
edition = "2018"
repository = "https://github.com/Bonfida/bonfida-utils.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
mock-oracle = []
benchmarking = ["lazy_static", "regex", "serde", "serde_json"]

[dependencies]
borsh = "1.7.0"
solana-program = { workspace = true }
pyth-sdk-solana = { package = "pyth-sdk-solana-2", version = "0.11.0" }
bonfida-macros = { version = "0.9.0", path = "../macros" }
bytemuck = "1.8.0"
lazy_static = { version = "1.5.0", optional = true }
regex = { version = "1.11.1", optional = true }
serde = { version = "1.0.136", features = ["derive"], optional = true }
serde_json = { version = "1.0.79", optional = true }
spl-token = { workspace = true, features = ["no-entrypoint"] }
pyth-solana-receiver-sdk = "2.0.0"

[dev-dependencies]
solana-client = "4.1.2"
hex = "0.4.3"
rand = "0.10.2"
# bonfida-macros-old = {version = "=0.6.2", package = "bonfida-macros"}
